--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
     <div class="modal-content">
+      <h4>Contactos</h4>
       <div class="row">
         <form class="col s12">
           <div class="row">
@@ -28,11 +29,15 @@
               <label for="icon_telephone">Telephone</label>
             </div>
           </div>
+          <div class="row">
+            <div class="col s12">
+              <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn left">Agregar</a>
+              </div>
+            </div>
+          </div>
         </form>
       </div>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Guardar</a>
     </div>
   </div>
 
@@ -47,6 +52,10 @@
       </ul>
     </div>
   </nav>
+  <!-- Agenda de contactos -->
+  <div id="contact">
+
+  </div>
 
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
